Fix run of last cell

--- a/uncert_SCG_from_Hugonnet2022.ipynb
+++ b/uncert_SCG_from_Hugonnet2022.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "c631be92",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "6fffe2fa",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "a21db117",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "4fb6e7a9",
    "metadata": {},
    "outputs": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "ddf3528a-dbcd-487d-9f4c-cb7eabf85a27",
    "metadata": {},
    "outputs": [
@@ -504,10 +504,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f87550b0a30>]"
+       "[<matplotlib.lines.Line2D at 0x7f891d5c2620>]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "b5970bca",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
        "(3083354.0, 3101266.0)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "980c716a",
    "metadata": {},
    "outputs": [
@@ -637,10 +637,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1fbf079f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The error (1-sigma) in mean elevation change for SCG is 1.77 meters.\n"
+     ]
+    }
+   ],
    "source": [
     "# areas = [glacier_outlines.ds[glacier_outlines.ds[\"NAME\"] == \"SCG\"]]\n",
     "areas = [glacier_outlines.ds[glacier_outlines.ds[\"FID_1\"] == 3643]]\n",
